@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jul-25-2005 patrickh    Added vrj::Projection::getNearFar().
 Jul-20-2005 patrickh    Do not call pfExit() in vrj::PfDrawManager::closeAPI().
                         Leave that up to application programmers to put at the
                         end of their main() function instead.
